==> wbasser/SoftwareLibraries/HAL/Atmel/SAMD5X/I2C/Core/Trunk/I2c.c <==
#include "Clock/Clock.h"
#include "SystemTick/SystemTick.h"
#include "I2C/I2c.h"
#define BAUD_RATE_SLOW      ( 100000l )
#define BAUD_RATE_FAST      ( 400000l )
#define CMD_SEND_STOP       ( 3 )
#define LCLCTL_SIZE         sizeof( LCLCTL )

void I2c_Initialize( void )
{
  PI2CDEF                 ptDef;
  I2CDEVENUM              eDev;
  SercomI2cm*             ptI2c;
  U32                     uTemp;
  SERCOM_I2CM_CTRLA_Type  tCtrlA;
  
  // for each device
  for ( eDev = 0; eDev < I2C_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );

    // disable the control and wait for done
    ptI2c->CTRLA.bit.SWRST = 1;
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY
    
    // now set the baudrate
    uTemp = ( ptDef->bFastSpeed ) ? BAUD_RATE_FAST : BAUD_RATE_SLOW;
    ptI2c->BAUD.reg = ComputeBaudRate( ptDef->eChan, uTemp );
    
    // now set up control B
    ptI2c->CTRLB.reg = SERCOM_I2CM_CTRLB_SMEN;

    // enable the interrupts
    aePhyToDefMap[ ptDef->eChan ] = eDev;
    
    // enable the interrupt in the NVIC
    NVIC_EnableIRQ( SERCOM0_IRQn + ptDef->eChan );
    NVIC_SetPriority( SERCOM0_IRQn + ptDef->eChan, 3 );
      
    // now build control A
    tCtrlA.reg = SERCOM_I2CM_CTRLA_MODE_I2C_MASTER;
    tCtrlA.reg |= ( ptDef->bRunStandby ) ? SERCOM_I2CM_CTRLA_RUNSTDBY : 0;
    tCtrlA.reg |= SERCOM_I2CM_CTRLA_ENABLE;
    tCtrlA.reg |= SERCOM_I2CM_CTRLA_INACTOUT( 1 );
    tCtrlA.reg |= SERCOM_I2CM_CTRLA_SDAHOLD( 2 );
    ptI2c->CTRLA = tCtrlA;
    
    // now wait for done
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY
  }
}

void I2c_CloseAll( void )
{
  PI2CDEF                 ptDef;
  I2CDEVENUM              eDev;
  SercomI2cm*             ptI2c;
  
  // for each device
  for ( eDev = 0; eDev < I2C_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );

    // disable the control and wait for done
    ptI2c->CTRLA.bit.SWRST = 1;
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY

    // enable the interrupt in the NVIC
    NVIC_DisableIRQ( SERCOM0_IRQn + ptDef->eChan );
  }
}

I2CERR I2c_Write( I2CDEVENUM eDev, PI2CXFRCTL ptXfrCtl )
{
  I2CERR 	    eError = I2C_ERR_NONE;
  PI2CDEF 	  ptDef;
  PLCLCTL 	  ptCtl;
  U32         uTime;  
  SercomI2cm* ptI2c;

  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointer to the definition structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );
    
    // copy the values to the local controls
    ptCtl->ptXfrCtl = ptXfrCtl;
    ptCtl->wBufIdx = 0;

    // clear any error bits in the status/flag
    ptI2c->STATUS.reg = SERCOM_I2CM_STATUS_MASK;

    // set the running flag/direction/state
    ptCtl->bRunning = TRUE;
    ptCtl->eBusDir = BUS_DIR_WRITE;
    ptCtl->eError = I2C_ERR_NONE;

    // enable the interrupts
    ptI2c->INTFLAG.reg = SERCOM_I2CM_INTFLAG_MASK;
    ptI2c->INTENSET.reg = SERCOM_I2CM_INTENSET_MB | SERCOM_I2CM_INTENSET_ERROR;
    
    // now write the address with read bit cleared
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY
    ptI2c->ADDR.bit.ADDR = ( ptXfrCtl->nDevAddr << 1 ) | BUS_DIR_WRITE;

    // check for a blocking device
    if ( ptDef->pvCallBack == NULL )
    {
      // wait till done or timeout
      ptCtl->bRunning = TRUE;
      uTime = SystemTick_GetTimeMsec( ) + ptXfrCtl->uTimeout;
      while( ptCtl->bRunning )
      {
        // check for timeout
        if ( SystemTick_GetTimeMsec( ) >= uTime )
        {
          // timeout occured - flag error
          ptCtl->bRunning = FALSE;
          ptCtl->eError = I2C_ERR_TIMEOUT;
        }
      }

      // copy the error
      eError = ptCtl->eError;
    
      // disable the interrupts
      ptI2c->INTENCLR.reg = SERCOM_I2CM_INTENCLR_MB | SERCOM_I2CM_INTENCLR_ERROR;
    }
    else
    {
      // set the error to busy
      eError = I2C_ERR_BLKING;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERR_ILLDEV;
  }

  // return the status
  return( eError );
}

I2CERR I2c_Read( I2CDEVENUM eDev, PI2CXFRCTL ptXfrCtl )
{
  I2CERR      eError = I2C_ERR_NONE;
  PI2CDEF     ptDef;
  PLCLCTL     ptCtl;
  U32         uTime;  
  SercomI2cm* ptI2c;
  U8          nAddr;
  
  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );

    // copy the values to the local controls
    ptCtl->ptXfrCtl = ptXfrCtl;
    ptCtl->wBufIdx = 0;

    // clear any error bits in the status
    ptI2c->STATUS.reg = SERCOM_I2CM_STATUS_MASK;

    // clear the interrupts
    ptI2c->INTFLAG.reg = SERCOM_I2CM_INTFLAG_MASK;
    
    // clear the ack flag
    ptI2c->CTRLB.reg &= ~SERCOM_I2CM_CTRLB_ACKACT;

    // set the running flag/direction/state
    ptCtl->bRunning = TRUE;

    // clear the error
    ptCtl->eError = I2C_ERR_NONE;

    // compute the bus address
    nAddr = ( ptXfrCtl->nDevAddr << 1 );

    // process the address 
    if ( ptXfrCtl->nAddrLen == 0 )
    {
      // enable all the interrupts/set the bus direction/adjust the address
      ptI2c->INTENSET.reg = SERCOM_I2CM_INTENSET_MB | SERCOM_I2CM_INTENSET_SB | SERCOM_I2CM_INTENSET_ERROR;
      ptCtl->eBusDir = BUS_DIR_READ;
      nAddr |= BUS_DIR_READ;
    }
    else
    {
      // enable only the MB and Error interrupts
      ptI2c->INTENSET.reg = SERCOM_I2CM_INTENSET_MB | SERCOM_I2CM_INTENSET_ERROR;
      ptCtl->eBusDir = BUS_DIR_RDWRITE;
    }

    // now write the address with read bit set
    #ifdef __SAM_D21_SUBFAMILY
    while( ptI2c->SYNCBUSY.bit.SWRST );
    #endif //  __SAM_D21_SUBFAMILY
    ptI2c->ADDR.bit.ADDR = nAddr;

    // check for a blocking device
    if ( ptDef->pvCallBack == NULL )
    {
      ptCtl->bRunning = TRUE;
      uTime = SystemTick_GetTimeMsec( ) + ptXfrCtl->uTimeout;
      while( ptCtl->bRunning )
      {
        // check for timeout
        if ( SystemTick_GetTimeMsec( ) >= uTime )
        {
          // timeout occured - flag error
          ptCtl->bRunning = FALSE;
          ptCtl->eError = I2C_ERR_TIMEOUT;
        }
      }

      // copy the error
      eError = ptCtl->eError;
      
      // disable the interrupts
      ptI2c->INTENCLR.reg = SERCOM_I2CM_INTENCLR_MB | SERCOM_I2CM_INTENCLR_SB | SERCOM_I2CM_INTENCLR_ERROR;
    }
    else
    {
      // set the error to busy
      eError = I2C_ERR_BLKING;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERR_ILLDEV;
  }
  
  // return the error
  return(( I2CERR )eError );
}

I2CERR I2c_Ioctl( I2CDEVENUM eDev, I2CACTION eAction, PVOID pvData )
{
  I2CERR      eError = I2C_ERR_NONE;
  PI2CDEF     ptDef;
  PU32        puData;
  SercomI2cm* ptI2c;
  U32         uTime;
  PI2CCHKBSY  ptBusyParams;

  // set the pointer to avoid compiler errors
  puData = ( PU32 )pvData;
  
  // check for a valid I2C
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
    ptI2c = GetSercomChannel( ptDef->eChan );

    // process the action
    switch( eAction )
    {
      case I2C_ACTION_POLL_DEVICE :
        // get the parameters
        ptBusyParams = ( PI2CCHKBSY )pvData;

        // clear any error bits in the status/clear ACK flag
        ptI2c->STATUS.reg = SERCOM_I2CM_STATUS_MASK;
        ptI2c->CTRLB.reg &= ~SERCOM_I2CM_CTRLB_ACKACT;

        // now write the address with read bit set
        #ifdef __SAM_D21_SUBFAMILY
        while( ptI2c->SYNCBUSY.bit.SWRST );
        #endif //  __SAM_D21_SUBFAMILY
        ptI2c->ADDR.bit.ADDR = ( ptBusyParams->nDevAddr << 1 ) | ptBusyParams->bReadMode;

        // get the status - check for flag
        uTime = SystemTick_GetTimeMsec( ) + 10;
        while( SystemTick_GetTimeMsec( ) < uTime  )
        {
          // check for MB flag
          if ( ptI2c->INTFLAG.bit.MB )
          {
            // clear the flag
            ptI2c->INTFLAG.reg = SERCOM_I2CM_INTFLAG_MB;

            // break;
            break;
          }
        }

        // return the status based on RXNACK
        if ( ptI2c->STATUS.reg & SERCOM_I2CM_STATUS_RXNACK )
        {
          // set error 
          eError = I2C_ERR_SLVNAK;
        }

        // issue stop
        #ifdef __SAM_D21_SUBFAMILY
        while( ptI2c->SYNCBUSY.reg & SERCOM_I2CM_SYNCBUSY_MASK );
        #endif //  __SAM_D21_SUBFAMILY
        ptI2c->CTRLB.reg |= SERCOM_I2CM_CTRLB_CMD( CMD_SEND_STOP );

        // clear status bits
        ptI2c->STATUS.reg = SERCOM_I2CM_STATUS_MASK;
        break;
        
      case I2C_ACTION_SET_DEVADDR :
        break;
        
      case I2C_ACTION_GET_DEVADDR :
        break;
        
      default :
        // illegal action
        eError = I2C_ERR_ILLACT;
        break;
    }
  }
  else
  {
    // illegal device
    eError = I2C_ERR_ILLDEV;
  }
  
  // return the error
  return( eError );
}

I2CERR I2c_Close( I2CDEVENUM eDev )
{
  I2CERR       eError = I2C_ERR_NONE;
  SercomI2cm*  ptI2c;
  
  // check for a valid UART
  if ( eDev < I2C_DEV_ENUM_MAX )
  {
    // get the pointer to the USART channel
    ptI2c = GetSercomChannel( g_atI2cDefs[ eDev ].eChan );

    // disable the USART
    while( ptI2c->SYNCBUSY.reg & SERCOM_I2CM_SYNCBUSY_MASK );
    ptI2c->CTRLA.reg &= ~SERCOM_I2CM_CTRLA_ENABLE;

    // enable the interrupt in the NVIC
    NVIC_DisableIRQ( SERCOM0_IRQn + g_atI2cDefs[ eDev ].eChan );
  }
  else
  {
    // illegal device
    eError = I2C_ERR_ILLDEV;
  }
  
  // return the error
  return( eError );
}

static void IrqCommonHandler( I2CDEVENUM eDev )
{
  PI2CDEF       ptDef;
  PLCLCTL       ptCtl;
  SercomI2cm*   ptI2c;
  U8            nAddr;
  
  // get the definition/control structure pointers
  ptDef = ( PI2CDEF )&g_atI2cDefs[ eDev ];
  ptCtl = &atLclCtls[ eDev ];

  // get the pointer to the register
  ptI2c = GetSercomChannel( ptDef->eChan );

  // check for error first
  if ( ptI2c->INTFLAG.bit.ERROR )
  {
    // clear the flag
    ptI2c->INTFLAG.reg |= SERCOM_I2CM_INTFLAG_ERROR;
    
    // set the error and exit
    ProcessComplete( I2C_ERR_BUSFAULT, ptDef, ptCtl, ptI2c );
  }

  // check master on bus
  if ( ptI2c->INTFLAG.bit.MB )
  {
    // clear the flag
    ptI2c->INTFLAG.reg = SERCOM_I2CM_INTFLAG_MB;

    // now determine the action
    if ( ptI2c->STATUS.bit.ARBLOST )
    {
      // error - arbitration lost
      ProcessComplete( I2C_ERR_ARBLOST, ptDef, ptCtl, ptI2c );
    }
    else if ( ptI2c->STATUS.bit.RXNACK )
    {
      // error - NAK
      ProcessComplete( I2C_ERR_SLVNAK, ptDef, ptCtl, ptI2c );
    }
    else
    {
      // process the bus write
      switch( ProcessMasterWrite( ptCtl, ptI2c ))
      {
        case PRC_WR_ACTION_DONE :
          //  call process complete
          ProcessComplete( I2C_ERR_NONE, ptDef, ptCtl, ptI2c );
          break;

        case PRC_WR_ACTION_RESTART :
          // allow all interrupts
          ptI2c->INTENSET.reg = SERCOM_I2CM_INTENSET_MB | SERCOM_I2CM_INTENSET_SB | SERCOM_I2CM_INTENSET_ERROR;

          // compute the bus address
          nAddr = ( ptCtl->ptXfrCtl->nDevAddr << 1 ) | BUS_DIR_READ;

          // now write the address with read bit set
          while( ptI2c->SYNCBUSY.reg != 0 );
          ptI2c->ADDR.bit.ADDR = nAddr;
          break;

        default :
          break;
      }
    }
  }

  // check slave on bus
  if ( ptI2c->INTFLAG.bit.SB )
  {
    // clear the flag
    ptI2c->INTFLAG.reg = SERCOM_I2CM_INTFLAG_SB;

    // check for read
    if ( ProcessMasterRead( ptCtl, ptI2c ) == TRUE )
    {
      //  call process complete
      ProcessComplete( I2C_ERR_NONE, ptDef, ptCtl, ptI2c );
    }
  }
}

static void ProcessComplete( I2CERR eError, PI2CDEF ptDef, PLCLCTL ptCtl, SercomI2cm* ptI2c )
{
  // clear the funning flag/set the state to idle/set the error
  ptCtl->bRunning = FALSE;
  ptCtl->eError = eError;

  // issue stop
  while( ptI2c->SYNCBUSY.reg & SERCOM_I2CM_SYNCBUSY_MASK );
  ptI2c->CTRLB.reg |= SERCOM_I2CM_CTRLB_CMD( CMD_SEND_STOP );

  // check to see if the callback is not null
  if ( ptDef->pvCallBack != NULL )
  {
    // call it
    ptDef->pvCallBack( 0 );
  }
}
